--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 @import 'layout/puzzle';
 @import 'layout/sample';
 @import 'layout/score';
+@import 'layout/timer';
 
 * {
   box-sizing: border-box;
