--- a/src/scss/util/_var.scss
+++ b/src/scss/util/_var.scss
@@ -16,3 +16,13 @@ $color-wrong: #e91e63;
 //            font            
 //-----------------------------
 $font-score: 2.7rem;
+
+//-----------------------------
+//            timer            
+//-----------------------------
+$timer-size: 6rem;
+$timer-thick: 0.3rem;
+$timer-color-back: #edf1f3;
+$timer-color-remain: #4caf50;
+$timer-color-warn: #ffb300;
+$timer-color-alert: #e91e63;
