--- a/src/scss/util/_cards.scss
+++ b/src/scss/util/_cards.scss
@@ -5,11 +5,14 @@
   @if $type == left {
     border-radius: 0 $card-padding $card-padding 0;
   }
+  @if $type == right {
+    border-radius: $card-padding 0 0 $card-padding;
+  }
   @if $type == center {
     border-radius: $card-padding;
   }
-  @if $type == right {
-    border-radius: $card-padding 0 0 $card-padding;
+  @if $type == popup {
+    border-radius: $popup-border-radius;
   }
 }
 
@@ -18,6 +21,6 @@
   flex-direction: column;
   align-items: center;
   width: $puzzle-item-width + 2 * $card-padding;
-  
+
   background: #000;
 }
