--- a/src/scss/util/_var.scss
+++ b/src/scss/util/_var.scss
@@ -1,24 +1,27 @@
 //-----------------------------
-//            width            
+//            width
 //-----------------------------
 $card-padding: 1.5rem;
 
 $puzzle-column: 6;
 $puzzle-item-width: 6rem;
 
+$popup-border-radius: 0rem;
+$popup-icon-size: 8rem;
+
 //-----------------------------
-//            color            
+//            color
 //-----------------------------
 $color-correct: #4caf50;
 $color-wrong: #e91e63;
 
 //-----------------------------
-//            font            
+//            font
 //-----------------------------
 $font-score: 2.7rem;
 
 //-----------------------------
-//            timer            
+//            timer
 //-----------------------------
 $timer-size: 6rem;
 $timer-thick: 0.3rem;
@@ -26,3 +29,8 @@ $timer-color-back: #edf1f3;
 $timer-color-remain: #4caf50;
 $timer-color-warn: #ffb300;
 $timer-color-alert: #e91e63;
+
+//-----------------------------
+//            time
+//-----------------------------
+$popup-anim-duration: 0.3s;
