--- a/src/scss/layout/_popup.scss
+++ b/src/scss/layout/_popup.scss
@@ -5,30 +5,65 @@
     visibility: visible;
     backdrop-filter: blur(5px) brightness(60%);
 
-    & > .popup {
-      transform: translateY(0);
+    & > .popup-how {
+      transform: translate(33.33vw, 0);
     }
+
+    & > .popup-menu {
+      transform: translate(0, 0);
+    }
+
+    & > .popup-score {
+      transform: translate(-33.33vw, 0);
+    }
+
+    // & > .popups {
+    //   transform: translate(33vw, 0);
+    // }
+
+    // & > .popup__hide {
+    //   transform: translate(-33vw, 0) !important;
+    // }
   }
 }
 
 .popup {
   @include card(popup);
-  padding: 1rem;
+  position: relative;
+  padding: 2rem 3rem;
   width: 50%;
-  
-  transform: translateY(-50vh);
-  transition: transform ease 0.2s;
-  
+  transition: all 0.2s ease;
+
+  &s {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    // transform: translate(25vw, calc(-50vh - 50%));
+    transition: all ease 0.3s;
+    // background-color: red;
+
+    &.pupup__hide {
+      #popup__how {
+        visibility: hidden !important;
+      }
+    }
+  }
+
+  &__hide {
+    // transform: translate(-25vw, calc(-50vh - 50%)) !important;
+  }
+
   &__top {
     display: flex;
     align-items: center;
-    // width: 50rem;
   }
 
   &__bottom {
     display: flex;
     justify-content: center;
- }
+    margin-top: 2rem;
+  }
 
   &__icon {
     width: $popup-icon-size;
@@ -36,33 +71,73 @@
     background: url('../img/logo.png') center center / contain;
   }
 
+  &__close {
+    position: absolute;
+    top: 1.7rem;
+    left: 1.5rem;
+
+    width: 1.5rem;
+    height: 1.5rem;
+
+    cursor: pointer;
+    visibility: hidden;
+
+    color: #333;
+
+    &:hover {
+      color: red;
+    }
+    @mixin close {
+      content: '';
+      display: block;
+      width: 1.5rem;
+      height: 1px;
+
+      position: absolute;
+      top: 50%;
+      left: 0;
+      transform-origin: center center;
+
+      background-color: currentColor;
+    }
+
+    &::before {
+      @include close;
+      transform: rotate(45deg);
+    }
+
+    &::after {
+      @include close;
+      transform: rotate(-45deg);
+    }
+  }
+
   &__title {
     margin: 0 1rem 0 auto;
 
     font-size: 2.5rem;
-    font-weight: 300;
+    font-weight: 400;
   }
-  
+
   &__text {
     color: #333;
     font-size: 1.6rem;
     font-weight: 100;
+    text-align: justify;
   }
 
   &__play {
-    @extend %button;
     background-color: $color-correct;
     margin-left: 2rem;
   }
-  
-  &__how {
-    @extend %button;
-    background-color: $color-wrong;
 
+  &__how {
+    background-color: $color-wrong;
   }
 
   &__backdrop {
     visibility: hidden;
+    position: relative;
 
     display: flex;
     justify-content: center;
@@ -76,4 +151,20 @@
 
     transition: all ease 0.2s;
   }
+}
+
+.hide {
+  opacity: 0;
+}
+
+.popup-how {
+  transform: translate(33.33vw, calc(-50vh - 50%));
+}
+
+.popup-menu {
+  transform: translate(0, calc(-50vh - 50%));
+}
+
+.popup-score {
+  transform: translate(-33.33vw, calc(-50vh - 50%));
 }
