--- a/src/scss/util/_var.scss
+++ b/src/scss/util/_var.scss
@@ -14,6 +14,7 @@ $popup-icon-size: 8rem;
 //-----------------------------
 $color-correct: #4caf50;
 $color-wrong: #e91e63;
+$color-total: #448AFF;
 
 //-----------------------------
 //            font
