تمامی کار ها انجام شده رسپانسیو شده تنها پر کردن متن ها و رتبه مانده

--- a/src/scss/layout/_logo.scss
+++ b/src/scss/layout/_logo.scss
@@ -8,18 +8,21 @@
   left: 0;
   width: 100%;
   height: 100%;
-  
+
   backdrop-filter: blur(5px) brightness(40%);
   transition: all ease 0.2s;
 
-  
-  animation: anim-backdrop 8s  ease both;
+  animation: anim-backdrop 8s ease both;
 }
 
 .logo {
   display: block;
-  width: 90vh;
+  width: 60vw;
   animation: anim-logo 6s 1s ease both;
+
+  @include respond(tab-port) {
+    width: 90vw;
+  }
 }
 
 @keyframes anim-logo {
@@ -41,7 +44,8 @@
     opacity: 0;
   }
 
-  20%, 80%{
+  20%,
+  80% {
     opacity: 1;
   }
   to {
