--- a/src/scss/layout/_sample.scss
+++ b/src/scss/layout/_sample.scss
@@ -6,6 +6,13 @@
 
 .sample {
   width: 100%;
+  height: auto;
   margin: 1rem 0;
   @include no-drag;
+
+  @include respond(phone) {
+    width: auto;
+    height: 5rem;
+    margin: 0 1rem;
+  }
 }
