--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,22 @@
 
 html {
   font-size: 62.5%;
+
+  @include respond(tab-land) {
+    font-size: 56.25%;
+  }
+
+  @include respond(tab-port) {
+    font-size: 50%;
+  }
+
+  @include respond(phone) {
+    font-size: 50%;
+  }
+
+  @include respond(big-desktop) {
+    font-size: 75%;
+  }
 }
 
 body {
@@ -31,7 +47,33 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 5rem;
+  height: 100vh;
+  transition: all 0.3s ease;
 
-  visibility: hidden;
+  opacity: 0;
+
+  @include respond(phone) {
+    flex-direction: column;
+  }
+}
+
+.help {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  width: 3rem;
+  height: 3rem;
+  }
+
+.mute {
+  position: fixed;
+  bottom: 1rem;
+  left: 1rem;
+  width: 3rem;
+  height: 3rem;
+}
+
+.icon {
+  width: 100%;
+  height: 100%;
 }
