--- a/src/scss/layout/_popup.scss
+++ b/src/scss/layout/_popup.scss
@@ -56,9 +56,17 @@
     transform: translateX(-100%);
   }
 
+  &--start {
+    backdrop-filter: blur(5px) brightness(60%);
+
+    &--show {
+      visibility: visible !important;
+      animation: anim-backdrop 4.5s ease both;
+    }
+  }
+
   &__backdrop {
     visibility: hidden;
-    position: relative;
 
     display: flex;
     justify-content: center;
@@ -188,6 +196,21 @@
       grid-column: span 2;
     }
 
+    &__score > .timer {
+      transform: scale(1.25) translateY(-10%);
+    }
+
+    &__game-score {
+      font-size: 115%;
+    }
+
+    &__time-score {
+      position: absolute;
+      bottom: 0;
+      transform: translateY(-60%);
+      font-size: 65%;
+    }
+
     &__correct {
       grid-column: 2 / 4;
     }
@@ -198,5 +221,18 @@
         margin: 0;
       }
     }
+
+    &__solution {
+      grid-column: 1 / -1;
+      margin-top: 1rem;
+    }
   }
+}
+
+.timer-restart {
+  font-size: 9rem;
+  font-weight: 100;
+  color: #fff;
+
+  @include no-drag();
 }
