--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -37,7 +37,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  background: url('../img/background.png') top left/cover;
+  background: url('../img/background.JPG') top left/cover;
 
   font-family: 'vazir';
   direction: rtl;
@@ -48,7 +48,7 @@ body {
   justify-content: space-between;
   align-items: center;
   height: 100vh;
-  transition: all 0.3s ease;
+  transition: all 1s ease;
 
   opacity: 0;
 
@@ -63,7 +63,7 @@ body {
   right: 1rem;
   width: 3rem;
   height: 3rem;
-  }
+}
 
 .mute {
   position: fixed;
