--- a/src/scss/util/_button.scss
+++ b/src/scss/util/_button.scss
@@ -57,3 +57,39 @@
     width: 14rem;
   }
 }
+
+.btn-second {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  color: $color-total;
+  font-size: 1.3rem;
+  cursor: pointer;
+
+  &::after {
+    content: '';
+
+    display: block;
+    height: 1px;
+    width: 110%;
+    margin-top: 0.5rem;
+
+    background-color: currentColor;
+
+    transform: scale(0);
+    transition: all 0.2s ease;
+
+    @media (hover: none) {
+      transform: scale(1);
+    }
+  }
+  
+  &:hover {
+    color: darken($color-total, 30%);
+    
+    &::after {
+      transform: scale(1);
+    }
+  }
+}
