--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -47,7 +47,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
   transition: all 1s ease;
 
   opacity: 0;
