--- a/src/scss/util/_button.scss
+++ b/src/scss/util/_button.scss
@@ -1,7 +1,7 @@
 .button {
   position: relative;
   padding: 0.5rem 1.5rem;
-  width: 10rem;
+  // width: 10rem;
 
   cursor: pointer;
 
@@ -27,7 +27,6 @@
     @media (hover: none) {
       position: static;
       transform: none;
-      margin-left: 1.5rem;
       height: 17px;
     }
   }
@@ -42,7 +41,7 @@
     }
 
     .button__label {
-      transform: translateX(-10rem);
+      transform: translateX(-200%);
 
       @media (hover: none) {
         transform: none;
@@ -52,9 +51,10 @@
 
   @media (hover: none) {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 14rem;
+    // width: 14rem;
   }
 }
 
