--- a/src/scss/layout/_sample.scss
+++ b/src/scss/layout/_sample.scss
@@ -1,18 +1,16 @@
-.samples {
-  @extend %card_side;
-
-  @include card(left);
-}
-
 .sample {
-  width: 100%;
-  height: auto;
-  margin: 1rem 0;
-  @include no-drag;
+  @include card(left);
 
-  @include respond(phone) {
-    width: auto;
-    height: 5rem;
-    margin: 0 1rem;
+  &__item {
+    display: block;
+    width: 100%;
+    margin: 1rem 0;
+    @include no-drag;
+
+    @include respond(phone) {
+      width: auto;
+      height: 5rem;
+      margin: 0 1rem;
+    }
   }
 }
