--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,79 +1,15 @@
-@import 'util/var';
-@import 'util/util';
-@import 'util/cards';
-@import 'util/typo';
-@import 'util/button';
+@import 'abstract/var';
+@import 'abstract/typo';
+@import 'abstract/util';
+
+@import 'modules/cards';
+@import 'modules/button';
+
+@import 'layout/base';
+
 @import 'layout/logo';
 @import 'layout/puzzle';
 @import 'layout/sample';
-@import 'layout/score';
+@import 'layout/scoreboard';
 @import 'layout/timer';
 @import 'layout/popup';
-
-* {
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-
-  @include respond(tab-land) {
-    font-size: 56.25%;
-  }
-
-  @include respond(tab-port) {
-    font-size: 50%;
-  }
-
-  @include respond(phone) {
-    font-size: 50%;
-  }
-
-  @include respond(big-desktop) {
-    font-size: 75%;
-  }
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  background: url('../img/background.JPG') top left/cover;
-
-  font-family: 'vazir';
-  direction: rtl;
-}
-
-.container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  min-height: 100vh;
-  transition: all 1s ease;
-
-  opacity: 0;
-
-  @include respond(phone) {
-    flex-direction: column;
-  }
-}
-
-.help {
-  position: fixed;
-  bottom: 1rem;
-  right: 1rem;
-  width: 3rem;
-  height: 3rem;
-}
-
-.mute {
-  position: fixed;
-  bottom: 1rem;
-  left: 1rem;
-  width: 3rem;
-  height: 3rem;
-}
-
-.icon {
-  width: 100%;
-  height: 100%;
-}
