--- a/src/scss/layout/_puzzle.scss
+++ b/src/scss/layout/_puzzle.scss
@@ -27,5 +27,48 @@
         transform: none;
       }
     }
+
+    &__box {
+      position: relative;
+
+      &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+
+        border-radius: 100%;
+        transform: scale(0);
+        opacity: 0;
+      }
+
+      &--correct::before {
+        background: radial-gradient($color-correct, transparent);
+        // background: $color-correct;
+      }
+
+      &--wrong::before {
+        background: radial-gradient($color-wrong, transparent);
+        // background: $color-wrong;
+      }
+
+      &--select::before {
+        animation: anim-itemChange 0.5s ease 1 backwards;
+      }
+    }
+  }
+}
+
+@keyframes anim-itemChange {
+  from {
+    transform: scale(0);
+    opacity: 1;
+  }
+
+  to {
+    transform: scale(1);
+    opacity: 0;
   }
 }
