popup بهبود وجود ندارد popup--main از popup--back دیگر محدودیت کم تر بودن ارتفاع

--- a/src/scss/abstract/_var.scss
+++ b/src/scss/abstract/_var.scss
@@ -6,7 +6,10 @@ $card-padding: 1rem;
 $puzzle-column: 6;
 $puzzle-item-width: 6rem;
 
-$popup-border-radius: 0rem;
+$popup-padding-tb: 1.3rem;
+$popup-padding-rl: 3rem;
+$popup-margin-t: -2rem;
+$popup-border-radius: 0;
 $popup-icon-size: 8rem;
 
 $button-margin: 1.5rem;
