config.json حذف اعداد مستقیم از کد ها و قرار دادن آن ها در فایل

--- a/src/scss/layout/_logo.scss
+++ b/src/scss/layout/_logo.scss
@@ -12,13 +12,13 @@
   backdrop-filter: blur(5px) brightness(40%);
   transition: all ease 0.2s;
 
-  animation: anim-backdrop 8s ease both;
+  animation: anim-backdrop #{$introDuration + $introDelay}ms ease both;
 }
 
 .logo {
   display: block;
   width: 60vw;
-  animation: anim-logo 6s 1s ease both;
+  animation: anim-logo #{$introDuration}ms #{$introDelay}ms ease both;
 
   @include respond(tab-port) {
     width: 90vw;
