(100vh) رفع مشکل ارتفاع در مرورگر های موبایلی

--- a/src/scss/layout/_base.scss
+++ b/src/scss/layout/_base.scss
@@ -3,6 +3,7 @@
 }
 
 html {
+  height: 100%;
   font-size: 62.5%;
 
   @include respond(tab-land) {
@@ -25,7 +26,8 @@ html {
 body {
   margin: 0;
   padding: 0;
-  background: url('../img/background.JPG') top left/cover;
+  height: 100%;
+  background: url('../img/background-min.JPG') top left/cover;
 
   font-family: 'vazir';
   direction: rtl;
@@ -35,7 +37,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-height: 100vh;
+  height: 100%;
   transition: all 1s ease;
 
   opacity: 0;
