--- a/src/scss/layout/_popup.scss
+++ b/src/scss/layout/_popup.scss
@@ -26,10 +26,11 @@
   display: grid;
   position: relative;
   width: 50%;
+  max-height: 100%;
 
   transition: all #{$popupCloseDuration}ms ease;
   transform: translateY(calc(-50vh - 50%));
-  overflow: hidden;
+  overflow: hidden auto;
 
   @include respond(tab-port) {
     width: 70%;
@@ -37,7 +38,7 @@
 
   @include respond(phone) {
     width: 100%;
-    height: 100vh;
+    height: 100%;
   }
 
   &--main,
@@ -101,7 +102,7 @@
   &__logo {
     width: $popup-icon-size;
     height: $popup-icon-size;
-    background: url('../img/logo.png') center center / contain;
+    background: url('../img/logo-min.png') center center / contain;
   }
 
   &__icon {
@@ -245,6 +246,42 @@
   &__help {
     align-self: center;
     margin-bottom: 2rem;
+  }
+
+  &__rank__table {
+    font-size: 1.3rem;
+    list-style: none;
+    padding: 0;
+    margin: 2rem 0;
+
+    li {
+      display: flex;
+      padding: 0.5rem 0;
+      background-color: #fafafa;
+
+      &:nth-child(even) {
+        background-color: #eee;
+      }
+    }
+
+    &__header {
+      color: #fff;
+      background-color: $color-correct !important;
+      font-weight: 700;
+    }
+
+    &__rank,
+    &__score {
+      flex: 0 0 4rem;
+      text-align: center;
+    }
+
+    &__name {
+      margin: {
+        right: 1rem;
+        left: auto;
+      }
+    }
   }
 }
 
