scss تغییر نسبی فایل های

--- a/src/pug/layout/intro.pug
+++ b/src/pug/layout/intro.pug
@@ -1,5 +1,5 @@
-.popup-logo
-  img.logo(
+.intro
+  img.intro__logo(
     src='../img/logo2-min.png',
     alt='موسسه هدایت فراگیر استعداد های برتر'
   )
