انجام تغییرات کلی pug اتمام تغییر به

--- a/src/pug/layout/popupMenu.pug
+++ b/src/pug/layout/popupMenu.pug
@@ -4,6 +4,9 @@ block var
   - var front_id = "menu";
   - var back_id = "how";
 
+  - var popup_front_id_enable = false;
+  - var popup_back_id_enable = false;
+
   - var front_title = "مربع های جهت دار";
   - var back_title = "مربع های جهت دار";
 
