--- a/src/pug/layout/popupResult.pug
+++ b/src/pug/layout/popupResult.pug
@@ -4,6 +4,9 @@ block var
   - var front_id = "score";
   - var back_id = "rank";
 
+  - var popup_front_id_enable = true;
+  - var popup_back_id_enable = false;
+
   - var front_title = "کارِت خوب بود";
   - var back_title = "جدول امتیازات";
 
@@ -18,25 +21,25 @@ block var
   - var back_btnSecondary_label = "بازگشت";
 
 block front-body
-  .popup__body
-    .popup__score__item.popup__score__max
+  .result
+    .result__item.result__max
       +timer
       h3 بیش ترین امتیاز
 
-    .popup__score__item.popup__score__score
+    .result__item.result__score
       +timer
       h3 امتیاز
 
-    .popup__score__item.popup__score__rank
+    .result__item.result__rank
       +timer
       h3 امتیاز نفر اول
 
-    .popup__score__item.popup__score__correct
-      span.popup__score__correct__number 0
+    .result__item.result__correct
+      span.result__correct__number 0
       h3 درست
 
-    .popup__score__item.popup__score__wrong 
-      span.popup__score__wrong__number 0
+    .result__item.result__wrong 
+      span.result__wrong__number 0
       h3 نادرست
 
 block back-body
