--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,4 +15,4 @@
 @import 'layout/sample';
 @import 'layout/scoreboard';
 @import 'layout/restartTimer';
-@import 'layout/popupScore';
+@import 'layout/popupResult';
